syntax = "proto3";
package cometbft.rpc.grpc.v1beta2;
option  go_package = "github.com/cometbft/cometbft/api/cometbft/rpc/grpc/v1beta2";

import "cometbft/rpc/grpc/v1beta1/types.proto";
import "cometbft/abci/v1beta2/types.proto";

//----------------------------------------
// Response types

message ResponseBroadcastTx {
  cometbft.abci.v1beta2.ResponseCheckTx   check_tx   = 1;
  cometbft.abci.v1beta2.ResponseDeliverTx deliver_tx = 2;
}

//----------------------------------------
// Service Definition

service BroadcastAPI {
  rpc Ping(v1beta1.RequestPing) returns (v1beta1.ResponsePing);
  rpc BroadcastTx(v1beta1.RequestBroadcastTx) returns (ResponseBroadcastTx);
}
